; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_fault.c_vm_fault_populate_check_page.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_fault.c_vm_fault_populate_check_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @vm_fault_populate_check_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vm_fault_populate_check_page(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp ne i32* %3, null
  %5 = zext i1 %4 to i32
  %6 = call i32 @MPASS(i32 %5)
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @vm_page_all_valid(i32* %7)
  %9 = call i32 @MPASS(i32 %8)
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @vm_page_xbusied(i32* %10)
  %12 = call i32 @MPASS(i32 %11)
  ret void
}

declare dso_local i32 @MPASS(i32) #1

declare dso_local i32 @vm_page_all_valid(i32*) #1

declare dso_local i32 @vm_page_xbusied(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
